--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </h1>
 
           <a href="#contact" class="button">Give Your Information</a>
-          <a href="assets/Sujal's CV.pdf" download class="button">Download CV</a>
+          <a href="assets/Sujal_Chhetri_Resume.pdf" download class="button">Download CV</a>
         </div>
 
         <div class="home__social">
